# duckdb-models

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
plans/: generate-duckdb-model.md  testing-strategy.md
src/: llama_backend.cpp  models_extension.cpp
src/include/: llama_backend.hpp  models_extension.hpp  models_internal.hpp
test/sql/: models.test
vcpkg_ports/ggml/: portfile.cmake
vcpkg_ports/llama-cpp/: portfile.cmake
